crates/shipper-webhook/src/snapshots/shipper_webhook__tests__snapshot_edge_cases__config_discord_with_secret.snap
---
source: crates/shipper-webhook/src/lib.rs
assertion_line: 2124
expression: config
---
WebhookConfig {
    url: "https://discord.com/api/webhooks/123/tok",
    webhook_type: Discord,
    secret: Some(
        "<redacted>",
    ),
    timeout_secs: 45,
}
